corrects splash screen on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -429,7 +429,7 @@ footer {
   section:not(#splash) {padding: 1rem 1vw;}
   #splash{background-position: 96%;}
   #history, #resources {outline-offset: -.2em;}
-  .spl-wrap {margin-left: 3%;}
+  .spl-wrap {margin-left: 0%; width: 100%; background-color: rgba(255,255,255,0.8);}
   .spl-txt{font-size:125%;}
   .hist-txt {column-count: 1;}
   .voices-wrap {grid-template-columns: 1fr;}
